--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -208,6 +208,8 @@
 "photo" = "Фотография";
 "upload_button" = "Загрузить";
 
+"open_original" = "Открыть оригинал";
+
 "avatar_album" = "Фотографии со страницы";
 "wall_album" = "Фотографии со стены";
 
@@ -353,10 +355,10 @@
 "video_updated" = "Обновлено";
 "video_link_to_yt" = "Ссылка на YT";
 
-"video_name" = "Название";
-"video_description" = "Описание";
-"video_uploaded_by" = "Загрузил";
-"video_upload_date" = "Дата загрузки";
+"info_name" = "Название";
+"info_description" = "Описание";
+"info_uploaded_by" = "Загрузил";
+"info_upload_date" = "Дата загрузки";
 
 "videos_zero" = "Ни одной видеозаписи";
 "videos_one" = "Одна видеозапись";
