--- a/locales/en.strings
+++ b/locales/en.strings
@@ -194,6 +194,11 @@
 "photo" = "Photo";
 "upload_button" = "Upload";
 
+"open_original" = "Open original";
+
+"avatar_album" = "Profile photos";
+"wall_album" = "Wall photos";
+
 "albums_zero" = "No albums";
 "albums_one" = "$1 album";
 "albums_other" = "$1 albums";
@@ -325,10 +330,10 @@
 "video_updated" = "Updated";
 "video_link_to_yt" = "YT link";
 
-"video_name" = "Title";
-"video_description" = "Description";
-"video_uploaded_by" = "Uploaded by";
-"video_upload_date" = "Upload date";
+"info_name" = "Title";
+"info_description" = "Description";
+"info_uploaded_by" = "Uploaded by";
+"info_upload_date" = "Upload date";
 
 "videos_zero" = "No videos";
 "videos_one" = "$1 video";
