--- a/locales/pl.strings
+++ b/locales/pl.strings
@@ -353,10 +353,10 @@
 "video_updated" = "Aktualizacja";
 "video_link_to_yt" = "Link na YT";
 
-"video_name" = "Nazwa";
-"video_description" = "Opis";
-"video_uploaded_by" = "Pobrał";
-"video_upload_date" = "Data pobrania";
+"info_name" = "Nazwa";
+"info_description" = "Opis";
+"info_uploaded_by" = "Pobrał";
+"info_upload_date" = "Data pobrania";
 
 "videos_zero" = "Brak nagrania wideo";
 "videos_one" = "Jedno nagranie wideo";
