Locales: Minor corrections and new strings added
Added: results, post_as_group, add_signature, contains_nsfw, attach_no_longer_available, open_post, version_incompatibility, all_news, posts_per_page, none

--- a/locales/de.strings
+++ b/locales/de.strings
@@ -254,7 +254,7 @@
 "main" = "Hauptseite";
 "contacts" = "Kontakte";
 "avatar" = "Avatar";
-"privacy" = "privatsphäre";
+"privacy" = "Privatsphäre";
 "interface" = "oberfläche";
 
 "profile_picture" = "Profilbild";
