Add pinning feature

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -104,6 +104,9 @@
 "delete" = "Удалить";
 "comments" = "Комментарии";
 "share" = "Поделиться";
+"pin" = "Закрепить";
+"unpin" = "Открепить";
+"pinned" = "закреплено";
 "comments_tip" = "Будьте первым, кто оставит комментарий!";
 "your_comment" = "Ваш комментарий";
 "comments" = "Комментарии";
