--- a/locales/en.strings
+++ b/locales/en.strings
@@ -105,6 +105,9 @@
 "delete" = "Delete";
 "comments" = "Comments";
 "share" = "Share";
+"pin" = "Pin";
+"unpin" = "Unpin";
+"pinned" = "pinned";
 "comments_tip" = "Be first, who leaves a comment at this post!";
 "your_comment" = "Your comment";
 "comments" = "Comments";
