Ukrainian: New strings - pin, unpin, pinned

--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -104,6 +104,9 @@
 "delete" = "Видалити";
 "comments" = "Коментарі";
 "share" = "Поділитися";
+"pin" = "Прикріпити";
+"unpin" = "Відкріпити";
+"pinned" = "прикріплено";
 "comments_tip" = "Будьте першим, хто залишить коментар!";
 "your_comment" = "Ваш коментарій";
 "comments" = "Коментарії";
