--- a/README.textile
+++ b/README.textile
@@ -1,7 +1,7 @@
 h1. <img align="right" src="https://github.com/openvk/openvk/raw/master/Web/static/img/logo.png" alt="openvk" title="openvk" width="15%">OpenVK
 
 *OpenVK* is an attempt to create a simple CMS that -cosplays- imitates old VK. Code provided here is not stable yet.
-VKontakte belongs to Pavel Durov and mail.ru.
+VKontakte belongs to Pavel Durov and VK Group.
 To be honest, we don't even know whether it even works. However, this version is maintained and we will be happy to accept your bugreports "in our bug-tracker":https://github.com/openvk/openvk/projects/1. You should also be able to submit them using "ticketing system":https://openvk.su/support?act=new (you will need an OVK account for this).
 
 h2. When's the release?
