README: Added new instance
Closes #221

--- a/README.textile
+++ b/README.textile
@@ -13,6 +13,7 @@ Updating the source code is done with this command: @git pull --recurse-submodul
 h2. Instances
 
 * *"openvk.su":https://openvk.su/*
+* "openvk.zavsc.pw":http://openvk.zavsc.pw/
 
 h2. Can I create my own OpenVK instance?
 
