--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -505,6 +505,11 @@
 "gifts_few" = "$1 подарунка";
 "gifts_many" = "$1 подарунків";
 "gifts_other" = "$1 подарунків";
+"gifts_left_zero" = "0 подарунків залишилося";
+"gifts_left_one" = "Один подарунок залишився";
+"gifts_left_few" = "$1 подарунка залишилося";
+"gifts_left_many" = "$1 подарунків залишилося";
+"gifts_left_other" = "$1 подарунків залишилося";
 
 "send_gift" = "Відправити подарунок";
 
