User: Added a tab in "My Groups" page for usual and managed groups

--- a/locales/en.strings
+++ b/locales/en.strings
@@ -186,6 +186,7 @@
 "all_followers" = "All followers";
 "only_administrators" = "Only administrators";
 "website" = "Website";
+"managed" = "Managed";
 
 "administrators_one" = "$1 administrator";
 "administrators_other" = "$1 administrators";
