English, Russian, Ukrainian: Fix display of the number of gifts left

--- a/locales/ru.strings
+++ b/locales/ru.strings
@@ -506,6 +506,7 @@
 "gifts_few" = "$1 подарка";
 "gifts_many" = "$1 подарков";
 "gifts_other" = "$1 подарков";
+"gifts_left" = "Подарков осталось: $1";
 "gifts_left_one" = "Один подарок остался";
 "gifts_left_few" = "$1 подарка осталось";
 "gifts_left_many" = "$1 подарков осталось";
