--- a/locales/ua.strings
+++ b/locales/ua.strings
@@ -506,6 +506,7 @@
 "gifts_few" = "$1 подарунка";
 "gifts_many" = "$1 подарунків";
 "gifts_other" = "$1 подарунків";
+"gifts_left" = "Подарунків залишилося: $1";
 "gifts_left_one" = "Один подарунок залишився";
 "gifts_left_few" = "$1 подарунка залишилося";
 "gifts_left_many" = "$1 подарунків залишилося";
