--- a/locales/en.strings
+++ b/locales/en.strings
@@ -438,6 +438,7 @@
 "gifts_zero" = "Zero gifts";
 "gifts_one" = "One gift";
 "gifts_other" = "$1 gifts";
+"gifts_left" = "Gifts left: $1";
 "gifts_left_zero" = "Zero gifts left";
 "gifts_left_one" = "One gift left";
 "gifts_left_other" = "$1 gifts left";
